--- a/keypair.yml
+++ b/keypair.yml
@@ -7,7 +7,7 @@
     - name:
       ec2_key:
         name: sample
-        region: "{{ap-south-1}}"
+        region: ap-south-1
       register: keyout
 
     - debug:
