vpc added1  for vpc net

--- a/vpc_setup2.yml
+++ b/vpc_setup2.yml
@@ -17,6 +17,7 @@
         tenancy: default
         state: "{{state}}"
       register: vpcout
+    - debug:
+        vars: vpcout
 
-   - debug:
-       var: vpcout
+
