--- a/vpc_setup3.yml
+++ b/vpc_setup3.yml
@@ -15,6 +15,21 @@
         dns_support: yes
         dns_hostnames: yes
         tenancy: default
+        state: present
       register: vpcout
     - debug:
         var: vpcout
+
+    - name: creating the subnet for vpc
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.id.vpc}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: present
+        cidr: "{{pubsub1cidr}}"
+        map_public: yes
+        resoure_tags:
+          name: vprofile-pubsub1
+      register: pubsub1_out
+
+
