--- a/vpc_setup3.yml
+++ b/vpc_setup3.yml
@@ -22,7 +22,7 @@
 
     - name: creating the subnet for vpc
       ec2_vpc_subnet:
-        vpc_id: "{{vpcout.id.vpc}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: present
