--- a/vpc_setup4.yml
+++ b/vpc_setup4.yml
@@ -22,7 +22,7 @@
 
     - name: creating the subnets
       ec2_vpc_subnet:
-        vpc_id: "{{vpcout.id.vpc}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         cidr: "{{pubsub1cidr}}"
