vpc code is created

--- a/vpc_setup4.yml
+++ b/vpc_setup4.yml
@@ -32,3 +32,14 @@
           name: vprofile-pubsub1
       register: pubsub1out
 
+    - name: creating the subent2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        cidr: "{{pubsub2cidr}}"
+        az: "{{zone2}}"
+        state: present
+        map_public: yes
+        tags:
+          name: vprofile-pubsub2
+      register: pubsub2out
