--- a/vpc_setup5.yml
+++ b/vpc_setup5.yml
@@ -33,3 +33,27 @@
           name: vprofile-pubsub1
       register: pubsub1out
 
+    - name: Creating public subnet1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        cidr: "{{pubsub2cidr}}"
+        az: "{{zone2}}"
+        state: present
+        map_public: yes
+        tags:
+          name: public-subnet2
+      register: pubsub2out
+
+    - name: creating public subnet2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "region"
+        cidr: "{{pubsub3cidr}}"
+        az: "{{zone3}}"
+        state: present
+        map_public: yes
+        tags:
+          name: public-subnet3
+      register: pubsub3out
+
