--- a/vpc_setup5.yml
+++ b/vpc_setup5.yml
@@ -22,38 +22,38 @@
         var: vpcout
 
     - name:
-      ec2_vpc_subnet:
+      ec2_vpc_subnet: creating the public subnet1
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
-        cidr: "{{pubsub1cidr}}"
         az: "{{zone1}}"
         state: present
+        cidr: "{{pubsub1cidr}}"
         map_public: yes
         resource_tags:
           name: vprofile-pubsub1
-      register: pubsub1out
+      register: pubsub1_out
 
-    - name: Creating public subnet1
+    - name: Creating public subnet2
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
-        cidr: "{{pubsub2cidr}}"
         az: "{{zone2}}"
         state: present
+        cidr: "{{pubsub2cidr}}"
         map_public: yes
         tags:
           name: public-subnet2
-      register: pubsub2out
+      register: pubsub2_out
 
-    - name: creating public subnet2
+    - name: creating public subnet3
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "region"
-        cidr: "{{pubsub3cidr}}"
         az: "{{zone3}}"
         state: present
+        cidr: "{{pubsub3cidr}}"
         map_public: yes
         tags:
           name: public-subnet3
-      register: pubsub3out
+      register: pubsub3_out
 
