--- a/vpc_setup5.yml
+++ b/vpc_setup5.yml
@@ -21,8 +21,8 @@
     - debug:
         var: vpcout
 
-    - name:
-      ec2_vpc_subnet: creating the public subnet1
+    - name: creating the public subnet1
+      ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
