vpc code is created1

--- a/vpc_setup5.yml
+++ b/vpc_setup5.yml
@@ -48,7 +48,7 @@
     - name: creating public subnet3
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
-        region: "region"
+        region: "{{region}}"
         az: "{{zone3}}"
         state: present
         cidr: "{{pubsub3cidr}}"
