--- a/vpc_setup5.yml
+++ b/vpc_setup5.yml
@@ -57,3 +57,36 @@
           name: public-subnet3
       register: pubsub3_out
 
+    - name: creating the private subnet1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcid.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: present
+        cidr: "{{prisub1cidr}}"
+        tags:
+          name: private_subnet1
+      register: prisub1_out
+
+    - name: creating the private subent 2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpc.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: present
+        cidr: "{{prisub2cidr}}"
+        tags:
+          name: private_subnet2
+      register: prisub2_out
+
+    - name: creating the private subnet 3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: present
+        cidr: "{{prisub3cidr}}"
+        tags:
+          name: private_subent3
+      register: prisub3_out
+
