--- a/vpc_setup5.yml
+++ b/vpc_setup5.yml
@@ -59,7 +59,7 @@
 
     - name: creating the private subnet1
       ec2_vpc_subnet:
-        vpc_id: "{{vpcid.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: present
@@ -70,7 +70,7 @@
 
     - name: creating the private subent 2
       ec2_vpc_subnet:
-        vpc_id: "{{vpc.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: present
