--- a/vpc-setup51.yml
+++ b/vpc-setup51.yml
@@ -55,3 +55,36 @@
         tags:
           name: publice_subnet3
       register: pubsub3out
+
+    - name: creating the private subnet 1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: present
+        cidr: "{{prisub1cidr}}"
+        tags:
+          name: private_subnet1
+      register: prisub1out
+
+    - name: creating the private subnet 2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: present
+        cidr: "{{prisub2cidr}}"
+        tags:
+          name: private_subnet2
+      register: prisub2out
+
+    - name: creating the private subnet 3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: present
+        cidr: "{{prisub3cidr}}"
+        tags:
+          name: private_subnet3
+      register: prisub3out
