--- a/vpc_setup52.yml
+++ b/vpc_setup52.yml
@@ -21,3 +21,72 @@
     - debug:
         var: vpcout
 
+    - name: creating the public subnet1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: present
+        cidr: "{{pubsub1cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-public_setup1
+      register: pubsub1_out
+
+    - name: creating the public subnet2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{[region}}"
+        az: "{{zone2}}"
+        state: present
+        cidr: "{{pubsub2cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-public-subnet2
+      register: pubsub2_out
+
+    - name: creating the public subnet3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: present
+        cidr: "{{pubsub3cidr}}"
+        map_public: yes
+        resource_tags:
+          name: vprofile-public-subnet3
+      register: pubsub2_out
+
+    - name: creating the private subent1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: present
+        cidr: "{{prisub1cidr}}"
+        resource_tags:
+          Name: vprofile-private-subnet1
+      register: prisub1_out
+
+    - name: creating the private subnet2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: present
+        cidr: "{{prisub2cidr}}"
+        resource_tags:
+          Name: vprofile-private-subnet2
+      register: prisub2_out
+
+    - name: creating the private subnet3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.in}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: present
+        cidr: "{{prisub3cidr}}"
+        resource_tags:
+          Name: vprofile-private-subnet3
+      register: prisub3_out
+
