--- a/vpc_setup53.yml
+++ b/vpc_setup53.yml
@@ -23,7 +23,7 @@
 
     - name: creating the public subnet1
       ec2_vpc_subnet:
-        vpc_id: "{[vpcout.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: present
