--- a/vpc_setup53.yml
+++ b/vpc_setup53.yml
@@ -35,11 +35,11 @@
 
     - name: creating the public subnet2
       ec2_vpc_subnet:
-        vpc_id: "{[vpcout.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: present
-        cidr: "{[pubsub2cidr}}"
+        cidr: "{{pubsub2cidr}}"
         map_public: yes
         resource_tags:
           Name: vprofile-public-subnet2
