--- a/vpc_setup53.yml
+++ b/vpc_setup53.yml
@@ -56,3 +56,36 @@
         resource_tags:
           Name: vprofile-public-subnet3
       register: pubsub3_out
+
+    - name: creating the private subnet1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: present
+        cidr: "{{prisub1cidr}}"
+        resource_tags:
+          Name: vprofile-private-subnet1
+      register: prisub1_out
+
+    - name: creating the private subnet2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: present
+        cidr: "{{prisub2cidr}}"
+        resource_tags:
+          Name: vprofile-private-subnet2
+      register: prisub2_out
+
+    - name: creating the private subnet3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: present
+        cidr: "{{prisub3cidr}}"
+        resource_tags:
+          Name: vprofile-private-subnet3
+      register: prisub3_out
