--- a/vpc_setup53.yml
+++ b/vpc_setup53.yml
@@ -89,3 +89,12 @@
         resource_tags:
           Name: vprofile-private-subnet3
       register: prisub3_out
+
+    - name: creating the IGW in vpc
+      ec2_vpc_igw:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        state: present
+        resource_tags:
+          Name: vprofile-IGW
+      register: igw_out
