--- a/vpc_setup54.yml
+++ b/vpc_setup54.yml
@@ -70,7 +70,7 @@
 
     - name: creaating the private subnet2
       ec2_vpc_subnet:
-        vpc_id: "{{vpcout.vpc.in}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone2}}"
         state: present
