--- a/vpc_setup54.yml
+++ b/vpc_setup54.yml
@@ -99,7 +99,7 @@
           Name: vprofile-igw
       register: igw_out
 
-    - name:
+    - name: creating the route table in public-subnets
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -110,7 +110,7 @@
           - "{{pubsub2_out.subnet.id}}"
           - "{{pubsub3_out.subnet.id}}"
         routes:
-          dest: 0.0.0.0/0
-          gateway_id: "{{igw_out.gateway_id}}"
+          - dest: 0.0.0.0/0
+            gateway_id: "{{igw_out.gateway_id}}"
       register: pubRT_out
 
