vpc code is created1

--- a/vpc_setup55.yml
+++ b/vpc_setup55.yml
@@ -1,5 +1,5 @@
 - name: this playbook will create the vpc in aws
-  hosts: local
+  hosts: localhost
   become: true
   connection: local
   gather_facts: false
