--- a/vpc_setup55.yml
+++ b/vpc_setup55.yml
@@ -9,7 +9,7 @@
 
     - name: vpc setup
       ec2_vpc_net:
-        name: "{{vpc_id"
+        name: "{{vpc_id}}"
         region: "{{region}}"
         state: present
         cidr_block: "{{vpccidr}}"
