--- a/vpc_setup55.yml
+++ b/vpc_setup55.yml
@@ -23,7 +23,7 @@
 
     - name: creating the public subnet1
       ec2_vpc_subnet:
-        vpc_id: "{{vpcout.vpc.in}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: present
@@ -49,7 +49,7 @@
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
-        az: "zone3"
+        az: "{{zone3}}"
         state: present
         cidr: "{{pubsub3cidr}}"
         map_public: yes
@@ -59,7 +59,7 @@
 
     - name: creating the private subnet1
       ec2_vpc_subnet:
-        vpc_id: "{[vpcout.vpc.in}}"
+        vpc_id: "{[vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone1}}"
         state: present
