--- a/vpc_setup56.yml
+++ b/vpc_setup56.yml
@@ -19,6 +19,9 @@
           Name: vprofile-vpc
       register: vpcout
 
+    - debug:
+        var: vpcout
+
     - name: creating the subnet for vpc
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
@@ -31,10 +34,10 @@
           Name: vprofile-pubsubnet1
       register: pubsub1_out
 
-    - name: creating the public subent2
+    - name: creating the public subent1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
-        region: "region}}"
+        region: "{{region}}"
         az: "{[zone2}}"
         state: present
         cidr: "{{pubsub2cidr}}"
