--- a/vpc_setup56.yml
+++ b/vpc_setup56.yml
@@ -38,15 +38,27 @@
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
-        az: "{[zone2}}"
+        az: "{[zone1}}"
         state: present
-        cidr: "{{pubsub2cidr}}"
+        cidr: "{{pubsub1cidr}}"
         map_public: yes
         tags:
           Name: vprofile-pubsubent2
       register: pubsub2_out
 
-    - name: creating the public subent3
+    - name: creating the public subent2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: present
+        cidr: "{{pubsub2cidr}}"
+        map_public: yes
+        tags:
+          Name: vprofile-pubsubnet3
+      register: pubsub2_out
+
+    - name: creating the public subnet3
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -57,6 +69,7 @@
         tags:
           Name: vprofile-pubsubnet3
       register: pubsub3_out
+
 
     - name: creating the private subnet1
       ec2_vpc_subnet:
