--- a/vpc_setup56.yml
+++ b/vpc_setup56.yml
@@ -79,10 +79,10 @@
         state: present
         cidr: "{{prisub1cidr}}"
         tags:
-          Name: vprofile- prisubnet1
+          Name: vprofile-prisubnet1
       register: prisub1_out
 
-    - name: creating the private subent2
+    - name: creating the private subnet2
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -95,7 +95,7 @@
 
     - name: creating the private subnet3
       ec2_vpc_subnet:
-        vpc_id: "{[vpcout.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         az: "{{zone3}}"
         state: present
