--- a/vpc_setup56.yml
+++ b/vpc_setup56.yml
@@ -121,7 +121,7 @@
           Name: vprofile-pubRT
         subnets:
           - "{{pubsub1_out.subnet.id}}"
-          - "{{pubsub2_out.subent.id}}"
+          - "{{pubsub2_out.subnet.id}}"
           -  "{{pubsub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
