--- a/vpc_setup56.yml
+++ b/vpc_setup56.yml
@@ -119,7 +119,7 @@
       ec2_vpc_nat_gateway:
         state: present
         subnet_id: "{{pubsub1_out.subnet_id}}"
-        wait: true
+        wait: yes
         region: "{{region}}"
         if_exist_do_not_create: true
       register: natgw_out
@@ -127,7 +127,6 @@
     - name: creating the route table for private subnet
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
-        state: present
         region: "{{region}}"
         tags:
           Name: vprofile-PriRT
