--- a/vpc_setup56.yml
+++ b/vpc_setup56.yml
@@ -136,5 +136,5 @@
           - "{{prisub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
-            gateway_id: "{{natgw_out.gateway_id}}"
+            gateway_id: "{{natgw_out.nat_gateway_id}}"
       register: privateRT_out
