--- a/vpc_setup57.yml
+++ b/vpc_setup57.yml
@@ -43,7 +43,7 @@
 
     - name: creating the public subnet3
       ec2_vpc_subnet:
-        vpc_id: "{{vpcout.vpc.in}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: present
         cidr: "{{pubsub3cidr}}"
