--- a/vpc_setup57.yml
+++ b/vpc_setup57.yml
@@ -99,7 +99,7 @@
         tags:
           Name: vprofile-publicRT
         subnets:
-          - "{{pubsub1-out.subnet.id}}"
+          - "{{pubsub1_out.subnet.id}}"
           - "{{pubsub2_out.subnet.id}}"
           - "{{pubsub3_out.subnet.id}}"
         routes:
