--- a/vpc_setup57.yml
+++ b/vpc_setup57.yml
@@ -95,7 +95,6 @@
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.out}}"
         region: "{{region}}"
-        state: present
         tags:
           Name: vprofile-publicRT
         subnets:
@@ -104,7 +103,7 @@
           - "{{pubsub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
-            gateway_id: "{{igw_out.gateway.id}}"
+            gateway_id: "{{igw_out.gateway_id}}"
       register: prisubRT_out
 
     - name: creating the nat gateway and allocate the EIP
