--- a/vpc_setup57.yml
+++ b/vpc_setup57.yml
@@ -93,7 +93,7 @@
 
     - name: creating the public route
       ec2_vpc_route_table:
-        vpc_id: "{{vpcout.vpc.out}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         tags:
           Name: vprofile-publicRT
