--- a/vpc_setup57.yml
+++ b/vpc_setup57.yml
@@ -110,6 +110,7 @@
       ec2_vpc_nat_gateway:
         state: present
         subnet_id: "{{pubsub1_out.subnet.id}}"
+        region: "{{region}}"
         wait: true
         if_exist_do_not_create: true
       register: natgw_out
