--- a/vpc-setup58.yml
+++ b/vpc-setup58.yml
@@ -36,7 +36,7 @@
 
     - name: creating the public subnet2
       ec2_vpc_subnet:
-        vpc_id: "{{vpcout.vpc.out}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: present
         cidr: "{{pubsub2cidr}}"
