vpc code is created1

--- a/vpc-setup58.yml
+++ b/vpc-setup58.yml
@@ -129,9 +129,9 @@
           Name: vprofile-priRT
         subnets:
           - "{{prisub1_out.subnet.id}}"
-          -  "{{prisub2_out.subnet.id}}"
-          -  "{{prisub3_out.subnet.id}}"
+          - "{{prisub2_out.subnet.id}}"
+          - "{{prisub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
-            gateway_id: "{{natgw_out.nat_gateway.id}}"
-      register: priRT_out
+            gateway_id: "{{natgw_out.nat_gateway_id}}"
+      register: natgw_out
