--- a/vpc-setup58.yml
+++ b/vpc-setup58.yml
@@ -135,3 +135,19 @@
           - dest: 0.0.0.0/0
             gateway_id: "{{natgw_out.nat_gateway_id}}"
       register: natgw_out
+
+    - debug:
+        var: "{{item}}"
+      loop:
+        - vpcout_vpc_id
+        - pubsub1_out.subnet.id
+        - pubsub2_out.subnet.id
+        - pubsub3_out.subnet.id
+        - prisub1_out.subnet.id
+        - prisub2_out.subnet.id
+        - prisub3_out.subnet.id
+        - igw_out.gateway.id
+        - pubRT_out.route_tabe.id
+        - natgw_out.nat_gateway_id
+        - priRT_out.rout_table.id
+
