vpc code is created1

--- a/vpc-setup58.yml
+++ b/vpc-setup58.yml
@@ -146,7 +146,7 @@
         - prisub1_out.subnet.id
         - prisub2_out.subnet.id
         - prisub3_out.subnet.id
-        - igw_out.gateway.id
+        - igw_out.gateway_id
         - pubRT_out.route_tabe.id
         - natgw_out.nat_gateway_id
         - priRT_out.route_table.id
