--- a/vpc-setup58.yml
+++ b/vpc-setup58.yml
@@ -142,17 +142,17 @@
     - debug:
         var: "{{item}}"
       loop:
-        - vpcout_vpc_id:
-        - pubsub1_out.subnet.id:
-        - pubsub2_out.subnet.id:
-        - pubsub3_out.subnet.id:
-        - prisub1_out.subnet.id:
-        - prisub2_out.subnet.id:
-        - prisub3_out.subnet.id:
-        - igw_out.gateway_id:
-        - pubRT_out.route_table.id:
-        - natgw_out.nat_gateway_id:
-        - priRT_out.route_table.id:
+        - vpcout_vpc_id
+        - pubsub1_out.subnet.id
+        - pubsub2_out.subnet.id
+        - pubsub3_out.subnet.id
+        - prisub1_out.subnet.id
+        - prisub2_out.subnet.id
+        - prisub3_out.subnet.id
+        - igw_out.gateway_id
+        - pubRT_out.route_table.id
+        - natgw_out.nat_gateway_id
+        - priRT_out.route_table.id
     - set_fact:
         vpcid: "{{vpcout.vpc.id}}"
         pubsub1id: "{{pubsub1_out.subnet.id}}"
