--- a/vpc_setup59.yml
+++ b/vpc_setup59.yml
@@ -35,7 +35,7 @@
 
     - name: creating the public subnet2
       ec2_vpc_subnet:
-        vpc_id: "{[vpcout.vpc.id}}"
+        vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: present
         az: "{{zone2}}"
