--- a/vpc_setup59.yml
+++ b/vpc_setup59.yml
@@ -107,9 +107,9 @@
         tags:
           Name: vprofile-pubRT
         subnets:
-          - "{{pubsub1cidr}}"
-          - "{{pubsub2cidr}}"
-          - "{{pubsub3cidr}}"
+          - "{{pubsub1cidr.subnet.id}}"
+          - "{{pubsub2cidr.subnet.id}}"
+          - "{{pubsub3cidr.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{igw_out.gateway.id}}"
@@ -132,12 +132,12 @@
         tags:
           Name: vprofile-pirRT
         subnets:
-          - "{{prisub1cidr}}"
-          -  "{{prisub2cidr}}"
-          -  "{{prisub3cidr}}"
+          - "{{prisub1cidr.subnet.id}}"
+          -  "{{prisub2cidr.subnet.id}}"
+          -  "{{prisub3cidr.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
-            gateway_id: "{{natgw_out.gateway.id}}"
+            gateway_id: "{{natgw_out.nat_gateway.id}}"
       register: priRT_out
 
     - debug:
