vpc code is created1

--- a/vpc_setup59.yml
+++ b/vpc_setup59.yml
@@ -120,7 +120,7 @@
       state: present
       region: "{{region}}"
       wait: true
-      subnet_id: "{{pubsub1cidr_out.subnet.id}}"
+      subnet_id: "{{pubsub1_out.subnet.id}}"
       if_exist_do_not_create: true
       register: natgw_out
 
