--- a/vpc_setup59.yml
+++ b/vpc_setup59.yml
@@ -90,13 +90,13 @@
           Name: vprofile-prisubnet3
       register: prisub3_out
 
-    - name: creating public internet gateway
+    - name: creating internet gateway
       ec2_vpc_igw:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
         state: present
         tags:
-          Name: vprofile-PubIGW
+          Name: vprofile-IGW
       register: igw_out
 
     - name: creating the route table for public subnet
@@ -107,9 +107,9 @@
         tags:
           Name: vprofile-pubRT
         subnets:
-          - "{{pubsub1cidr.subnet.id}}"
-          - "{{pubsub2cidr.subnet.id}}"
-          - "{{pubsub3cidr.subnet.id}}"
+          - "{{pubsub1_out.subnet.id}}"
+          - "{{pubsub2_out.subnet.id}}"
+          - "{{pubsub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{igw_out.gateway_id}}"
@@ -132,9 +132,9 @@
         tags:
           Name: vprofile-pirRT
         subnets:
-          - "{{prisub1cidr.subnet.id}}"
-          -  "{{prisub2cidr.subnet.id}}"
-          -  "{{prisub3cidr.subnet.id}}"
+          - "{{prisub1_out.subnet.id}}"
+          -  "{{prisub2_out.subnet.id}}"
+          -  "{{prisub3_out.subnet.id}}"
         routes:
           - dest: 0.0.0.0/0
             gateway_id: "{{natgw_out.nat_gateway_id}}"
