--- a/vpc_setup59.yml
+++ b/vpc_setup59.yml
@@ -55,7 +55,7 @@
         map_public: yes
         tags:
           Name: vprofile-pubsubnet3
-      register: pubsub2_out
+      register: pubsub3_out
 
     - name: creating the private subnet1
       ec2_vpc_subnet:
@@ -99,7 +99,7 @@
           Name: vprofile-IGW
       register: igw_out
 
-    - name: creating the route table for public subnet
+    - name: creating the public route
       ec2_vpc_route_table:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
