vpc code is created1

--- a/vpc_setup59.yml
+++ b/vpc_setup59.yml
@@ -150,9 +150,10 @@
         - prisub1_out.subnet.id
         - prisub2_out.subnet.id
         - prisub3_out.subnet.id
-        - igw_out.subnet.id
-        - pubRT_out.subnet.id
-        - priRt_out.subnet.id
+        - igw_out.gateway_id
+        - pubrt_out.route_table.id
+        - natgw_out.nat_gateway_id
+        - prirt_out.route_table.id
 
 
 
